app/styles/main.scss
$icon-font-path: '../fonts/';

// bower:scss
@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
@import "bower_components/fullpage.js/jquery.fullPage.scss";
// endbower

$sidebar-width: 400px;

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* Space out content a bit */
body {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

.navtree {
  position: fixed;
  overflow: hidden;
  top: $navbar-height;
  left: 0;
}

.scroll {
  height: 500px;
  width: 500px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
  ul {
    li {
      border: 1px solid gray;
    }
    border: 1px solid gray;
  }
}

/* Custom page footer */
.footer {
  font: 30px/500px "Microsoft Yahei";
  text-align: center;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
  p + h4 {
    margin-top: 28px;
  }
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    width: 100%;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }

  /* Space out the masthead */
  .header {
    margin: auto;
  }
}

.section {
  margin-left: $sidebar-width;
  padding-top: $navbar-height;
}

.s1 {
  background: black;
}

.s2 {
  background: red;
}

.s3 {
  background: greenyellow;
}

.s4 {
  background: darkslateblue;
}

